--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -73,8 +73,8 @@
 ========================================================================== */
 
 .menu-social-container.sharing-buttons {
-	strong, .menu {
-		@include inline-block(middle);
+	.menu {
+		display: inline;
 	}
 	strong {
 		padding: 0 5px 0 0;
