--- a/themusescircle/dev/themes/musescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/style.scss
@@ -22,12 +22,12 @@
 @import 'typography';
 @import 'base';
 @import 'form-fields';
+@import 'vendors';
+@import 'wordpress';
+@import 'shortcodes';
 @import 'header';
+@import 'front-page';
 @import 'layout';
 @import 'entry';
-@import 'owl-carousel';
-@import 'swipe-box';
-@import 'front-page';
-@import 'recent-reviews';
 @import 'footer';
 @import 'responsive';
