--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -380,16 +380,6 @@
 	.row {
 		display: block;
 	}	
-	.content article .pagination > .page-numbers {
-		margin: 0 -1px -5px -1px;
-		li {			
-			margin: 0 1px 5px 1px;
-			.page-numbers {
-				min-width: 26px;
-				font-size: rem(14px);
-			}
-		}
-	}
 
 	// entry.scss 
 	.entry-multiple .entry.post .entry-thumbnail, .entry-multiple .entry.insprvw-review .entry-item-reviewed,
@@ -448,6 +438,21 @@
 	.content:not(.full-width), .content.full-width {
 		.insprvw-recent-reviews:not(.owl-carousel) .insprvw-review .review-meta .review-date {
 			left: -18px;
+		}
+	}
+
+	// layout.scss
+	.content article .navigation-links ul {
+		display: block;
+		li.next {
+			text-align: left;
+			a {
+				padding: 5px 0 0 40px;
+				.icon {
+					left: 0;
+					right: auto;
+				}
+			}
 		}
 	}
 
