--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -310,18 +310,18 @@
 					}
 				}
 				.comment-meta, .comment-content p {
-					margin: 0 0 10px 0;
+					margin: 0 0 15px 0;
 				}
 				.comment-meta {
 					font-style: italic;
-					&:before, &:after {		
+					.author:before, .date:after {		
 						@include muses-icons(14px);
 					}
-					&:before {
+					.author:before {
 						margin: -10px 10px 0 0;
 						content: $icon-quotes-left;
 					}
-					&:after {
+					.date:after {
 						margin: 0 0 -10px 10px;
 						content: $icon-quotes-right;
 					}						
