--- a/themusescircle/dev/themes/musescircle/assets/scss/_wordpress.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_wordpress.scss
@@ -114,9 +114,6 @@
 	ul {
 		list-style: none;
 	}
-	select {
-		margin: 0 0 20px 0;
-	}
 	&.widget_tag_cloud .tagcloud {
 		margin: 0 -2.5px 15px -2.5px;
 		a {
@@ -135,36 +132,30 @@
 				top: 6px;
 				left: 5px;
 			}
-			&[style*='8pt'] {
+			&[style*='font-size: 8'], &[style*='font-size: 9'], &[style*='font-size: 10'] {
 				font-size: rem(11px) !important;
 			}
-			&[style*='11.6pt'] {
+			&[style*='font-size: 11'], &[style*='font-size: 12'], &[style*='font-size: 13'] {
 				font-size: rem(12px) !important;
 			}
-			&[style*='14pt'] {
+			&[style*='font-size: 14'], &[style*='font-size: 15'], &[style*='font-size: 16'] {
 				font-size: rem(13px) !important;
 			}	
-			&[style*='16pt'] {
+			&[style*='font-size: 17'], &[style*='font-size: 18'] {
 				font-size: rem(14px) !important;
 			}
-			&[style*='19pt'] {
+			&[style*='font-size: 19'], &[style*='font-size: 20'] {
 				font-size: rem(15px) !important;
 				&:before {
 					top: 8px;
 				}
-			}						
-			&[style*='21pt'] {
-				font-size: rem(17px) !important;
+			}
+			&[style*='font-size: 21'], &[style*='font-size: 22'] {
+				font-size: rem(16px) !important;
 				&:before {
 					top: 10px;
-				}				
-			}	
-			&[style*='22pt'] {
-				font-size: rem(18px) !important;
-				&:before {
-					top: 12px;
-				}				
-			}							
+				}
+			}										
 		}
 	}	
 	&.widget_calendar .calendar_wrap table {
