--- a/themusescircle/dev/themes/musescircle/assets/scss/_wordpress.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_wordpress.scss
@@ -202,6 +202,14 @@
 			}			
 		}
 	}
+	&.widget_categories, &.widget_archive {
+		ul li {
+			font-size: rem(13px);
+			a {
+				font-size: rem(15px);
+			}
+		}
+	}
 }
 
 /* Widgets - Sidebar
@@ -229,7 +237,7 @@
 				color: $color-01;
 				content: $icon-angle-right;
 				position: absolute;
-				top: 2px;
+				top: 2.5px;
 				left: 0;
 			}
 			ul {
@@ -292,12 +300,12 @@
 	& > ul, & > div:not(.menu-social-container) > ul {
 		font-size: rem(16px);
 		@include flex(row wrap);
-		margin: 0 -10px 15px -10px;		
+		margin: 0 -5px 15px -5px;		
 		& > li {
 			flex: 1 1 50%;
-			padding: 0 10px;
+			padding: 0 5px;
 			& > a {
-				display: block;
+				@include inline-block(middle);
 				color: $color-01;
 				padding: 0 0 5px 0;
 				&:hover {
