--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -8,7 +8,8 @@
 		@include flex(row wrap);
 	}
 	.entry {
-		flex: 1 1 50%;
+		flex: 1 0 auto;
+		width: 50%;
 		padding: 0 10px;
 		margin: 0 0 30px 0;
 		.entry-wrapper {
@@ -151,7 +152,6 @@
 
 .entry-author, .book-author {
 	@include flex(row wrap);
-	align-items: flex-start;
 	margin: 0 0 20px 0;
 	h3 {
 		flex: 1 1 100%;
@@ -173,7 +173,7 @@
 }
 
 .single .book-author .book-author-thumbnail {
-	flex: 0 1 auto;
+	flex: 0 0 auto;
 	max-width: 200px;
 }
 
@@ -359,7 +359,7 @@
 			margin: 0 5px 20px 5px;
 		}
 		.comment-form-author, .comment-form-email, .comment-form-url {
-			flex: 3;
+			flex: 1;
 		}
 		.comment-form-author, .comment-form-email, .comment-form-url, .comment-form-comment {
 			label:after {
