--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -13,7 +13,7 @@
 		padding: 0 10px;
 		margin: 0 0 30px 0;
 		.entry-wrapper {
-			flex: 1;
+			flex: 1 1 0%;
 		}		
 	}
 }
@@ -178,7 +178,7 @@
 }
 
 .entry-author .entry-author-details, .book-author .book-author-details {	
-	flex: 1;
+	flex: 1 1 0%;
 }
 
 .entry-author .entry-author-details .entry-author-social, .book-author .book-author-details .book-author-social {	
@@ -188,6 +188,12 @@
 	strong {
 		padding: 0 5px 0 0;
 	}
+}
+
+.entry-author h3, .book-author h3, 
+.entry-author .entry-author-thumbnail, .book-author .book-author-thumbnail,
+.entry-author .entry-author-details, .book-author .book-author-details {
+	min-width: 1px;
 }
 
 /* Entry - Review Details
@@ -287,7 +293,7 @@
 		list-style: none;
 		li {
 			@include flex(row wrap);
-			align-items: flex-start;				
+			align-items: flex-start;		
 			.comment-thumbnail {
 			    flex: 0 0 54px;
 			    margin: 0 20px 0 0;	
@@ -296,7 +302,7 @@
 				}
 			}
 			.comment-wrapper {
-				flex: 1;
+				flex: 1 1 0%;
 				margin: 0 0 20px 0;
 				.comment-meta, .comment-footer {
 					p {
@@ -359,7 +365,7 @@
 			margin: 0 5px 20px 5px;
 		}
 		.comment-form-author, .comment-form-email, .comment-form-url {
-			flex: 1;
+			flex: 1 1 0%;
 		}
 		.comment-form-author, .comment-form-email, .comment-form-url, .comment-form-comment {
 			label:after {
