--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -89,7 +89,6 @@
 	max-width: 1320px;
 	width: auto;
 	padding: 0 20px;
-	border: 1px solid #ff00ff;
 }
 
 .image-wrap {
@@ -106,7 +105,7 @@
 .row {
 	@include flex(row wrap);
 	.column {
-		flex: 1;
+		flex: 1 1 0%;
 	}
 	&.row-10 {
 		margin: 0 -10px;
@@ -139,7 +138,7 @@
 		@include flex(row nowrap);
 	}
 	article {
-		flex: 1;
+		flex: 1 1 0%;
 	}
 	aside {
 		flex: 0 0 270px;
